--- a/app/views/lessons/_lesson001m.erb
+++ b/app/views/lessons/_lesson001m.erb
@@ -1,6 +1,6 @@
 <code class='bash'>
-bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab3b$
-bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab3b$ bash authorize_dataproc.sh cluster-27ae us-central1 2
+cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3b$
+cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3b$ bash authorize_dataproc.sh cluster-27ae us-central1 2
 Machines to authorize: cluster-27ae-m cluster-27ae-w-0 cluster-27ae-w-1 in us-central1 ... finding their IP addresses
 ERROR: (gcloud.compute.instances.describe) Could not fetch resource:
  - Invalid value for field 'zone': 'us-central1'. Unknown zone.
@@ -33,6 +33,6 @@ Usage: gcloud sql instances patch INSTANCE [optional flags]
 
 For detailed information on this command and its flags, run:
   gcloud sql instances patch --help
-bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab3b$
-bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab3b$
+cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3b$
+cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3b$
 </code>
