--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -176,7 +176,10 @@
       VipYAl2XBs27K0VGwK+u3NOOerWXjRrgqIo9Frk7C4rps/dMYd
       56QKxnVumr24TUJ0TlymsCYkhD9qDHyJHxGTyN5BAzUpryphd7
       QDLZn+Rdrm4Ssu8/jclLPH
-      dan@ubu42
+      dan@ubu42.net
+
+%p Notice the last line.
+%p I use the last line to declare that I want GCP to create a Linux account named "dan" in the new Linux instance.
 
 %p Next, I clicked the blue "Create" button.
 
@@ -192,7 +195,7 @@
 
 %p It failed.
 
-%p After a bit of detective work I learned that I needed to specify an account which match the name in my gmail account:
+%p I used a shell command which asked to login as "dan".
 
 .syntax
   %pre
@@ -218,6 +221,12 @@
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
+
+%p Note: If you are on windows, you can get ssh from the URL listed below:
+
+%p
+  %a(href='https://git-scm.com/download/win' target='x')
+    https://git-scm.com/download/win
 
 %a(href='#top') [top]
 
