--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -160,6 +160,12 @@
 
 %p I deviated from the tutorial and clicked the link: "SSH keys"
 
+%p Note: If you are on windows, you can get ssh from the URL listed below:
+
+%p
+  %a(href='https://git-scm.com/download/win' target='x')
+    https://git-scm.com/download/win
+
 %p My intent was to ease my ability to ssh into the GCP-Instance from a shell in my laptop.
 %p The text I mouse-copied into the GCP SSH-key-form came from this file:
 %p ~/.ssh/id_rsa.pub
@@ -179,7 +185,7 @@
       dan@ubu42.net
 
 %p Notice the last line.
-%p I use the last line to declare that I want GCP to create a Linux account named "dan" in the new Linux instance.
+%p The last line asks GCP to create a Linux account named "dan" in the new Linux instance.
 
 %p Next, I clicked the blue "Create" button.
 
@@ -221,12 +227,6 @@
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
-
-%p Note: If you are on windows, you can get ssh from the URL listed below:
-
-%p
-  %a(href='https://git-scm.com/download/win' target='x')
-    https://git-scm.com/download/win
 
 %a(href='#top') [top]
 
