--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1494,7 +1494,11 @@
 
 %p I followed the same process to enable Translate API, Speech API, and Natural Language APIs.
 
+%p I studied the next codelabs-page:
 
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#3' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#3
 
 
 %p under construction
