--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1500,6 +1500,29 @@
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#3' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#3
 
+%p I visited my console URL:
+
+%p
+  %a(href='https://console.cloud.google.com' target='x')
+    https://console.cloud.google.com
+
+%p I clicked the Cloud-Shell button at upper-right.
+
+%p After GCP gave me a Cloud-Shell, I entered a shell command:
+
+.syntax
+  %pre
+    %code.bash datalab connect mydatalabvm
+
+%p GCP offered good news:
+
+
+
+
+.syntax
+  %pre
+    =render 'lesson001w'
+
 
 %p under construction
 
