--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1516,12 +1516,19 @@
 
 %p GCP offered good news:
 
-
-
-
 .syntax
   %pre
     =render 'lesson001w'
+
+%p I use the Web-Preview link in the upper-right of Cloud-Shell to load Datalab into a new tab in my browser.
+
+%p The Datalab URL served to me looked like this:
+
+%p
+  %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab/notebooks#' target='x')
+    https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab/notebooks#
+
+
 
 
 %p under construction
