--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1530,6 +1530,20 @@
 
 
 
+%p I studied the next codelabs-page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#4' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#4
+
+%p I loaded a URL from github.com:
+
+%p
+  %a(href='https://github.com/GoogleCloudPlatform/training-data-analyst/blob/master/CPB100/lab4c/mlapis.ipynb' target='x')
+    mlapis.ipynb
+  
+
+
 
 %p under construction
 
