--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1528,20 +1528,50 @@
   %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab/notebooks#' target='x')
     https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab/notebooks#
 
-
-
 %p I studied the next codelabs-page:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#4' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#4
 
+%p I visited the GCP-tab and loaded a URL:
+
+%p
+  %a(href='https://console.cloud.google.com/apis' target='x')
+    https://console.cloud.google.com/apis
+
+%p I clicked credentials-icon on left.
+
+%p I clicked blue-button: "Create credentials".
+
+%p I clicked API-key.
+
+%p GCP gave me this key:
+
+.syntax
+  %pre
+    %code AIzaSyBhcruU8RW0PeOllj-yxkfLnef3YRHwCt
+
 %p I loaded a URL from github.com:
 
 %p
   %a(href='https://github.com/GoogleCloudPlatform/training-data-analyst/blob/master/CPB100/lab4c/mlapis.ipynb' target='x')
     mlapis.ipynb
-  
+
+%p I studied comments in that page.
+
+%p I returned to my Datalab-tab.
+
+%p I clicked +Notebook
+
+%p It served me a new notebook with a field for syntax.
+
+%p I typed in this syntax:
+
+.syntax
+  %pre
+    %code APIKEY="AIzaSyBhcruU8RW0PeOllj-yxkfLnef3YRHwCt"
+    
 
 
 
