--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1571,7 +1571,8 @@
 .syntax
   %pre
     %code APIKEY="AIzaSyBhcruU8RW0PeOllj-yxkfLnef3YRHwCt"
-    
+
+%p I entered Shift-Enter which activated the syntax and then opened a new syntax-field.
 
 
 
