--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1411,15 +1411,9 @@
 %p That ended my interaction with the CPB100-node I call: "TensorFlow".
 
 
-
-
-
-
 %a(href='#top') [top]
 %hr/
 %h2#translate-api Translate-API
-
-
 
 %p I clicked the next link in the series:
 
@@ -1574,14 +1568,34 @@
 
 %p I entered Shift-Enter which activated the syntax and then opened a new syntax-field.
 
+%p Next, one field at a time, I carefully copy-pasted syntax from Github-tab to my Datalab-tab.
 
+%p I saw responses from GCP which matched information in the Github-tab.
 
-%p under construction
+%p So, I am confident I completed the lab with no error.
 
+%p In my GCP-tab I loaded this URL:
 
+%p
+  %a(href='https://console.cloud.google.com/compute/instances' target='x')
+    https://console.cloud.google.com/compute/instances
+  
+%p I stopped the instance named: "mydatalabvm".
+
+%p Next,  I loaded this URL:
+%p
+  %a(href='https://console.cloud.google.com/apis/credentials' target='x')
+    https://console.cloud.google.com/apis/credentials
+
+%p I used the trash-can-icon to remove the API key I no longer needed.
+
+%p That ended my interaction with the CPB100-node I call: "Translate-API".
 
 %a(href='#top') [top]
 %hr/
+
+
+
 %h2#serverless-ingest Serverless-Ingest
 %p under construction
 
