--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1,8 +1,67 @@
 %h1#top Lesson 001 [ Google GCP ]
-%p I started this lesson by studying the URL listed below:
+
+%p I have taught this lesson several times now.
+
+%p Most of this lesson is done with a browser.
+
+%p I offer tips for success.
+
+%ul
+  %li Use Google-Chrome browser.
+  %li Dedicate a new browser window to this lesson.
+  %li If you need a browser to check news or e-mail, do it in another window.
+  %li Get a new window with: File -> New Window
+  %li Why? Because you want to avoid working in a window with many tabs.
+  %li On a piece of paper, write down a useful tab-organization:
+  %li
+    %ul
+      %li Tab 1: cs101.us
+      %li Tab 2: codelabs
+      %li Tab 3: github
+      %li Tab 4: GCP 1
+      %li Tab 5: GCP Cloud-Shell
+      %li Tab 6: GCP 2
+      %li Tab 7: GCP 3
+
+%p I started this lesson by creating a new Chrome-window.
+
+%p I created 7 tabs in that window.
+
+%p
+  In tab 1 I loaded this URL:
+  %a(href='http://cs101.us' target='x')
+    http://cs101.us
+  
+%p
+  In tab 2 I loaded this URL:
+  %a(href='https://codelabs.developers.google.com/cpb100' target='x')
+    https://codelabs.developers.google.com/cpb100
+  
+%p
+  In tab 3 I loaded this URL:
+  %a(href='https://github.com/GoogleCloudPlatform' target='x')
+    https://github.com/GoogleCloudPlatform
+  
+%p
+  In tab 4 I loaded this URL:
+  %a(href='https://console.cloud.google.com' target='x')
+    https://console.cloud.google.com
+%p In tabs 5,6,7 I had done nothing (yet).  
+
+%p After I created the 7 tabs, my Chrome-window looked like this:
+
+%img(src='/lesson001/img001.png')
+  
+  
+
+%p I clicked on tab 2, the codelabs-tab.
+
+%p I continued this lesson by studying the URL listed below:
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
+
+%img(src='/lesson001/img002.png')
 
 %p On that page I assume the correct ordering of some links is listed below:
 
@@ -74,7 +133,7 @@
 
 %h2#free-trial Free-Trial
 
-%p#free-trial Next, I clicked this link:
+%p#free-trial Next, in the codelabs-tab, I clicked this link:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-free-trial' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-free-trial
@@ -83,12 +142,13 @@
 
 %p The third page had a noteworthy URL I used to get $300 of cloud-credit from Google:
 
+%p I loaded the URL into tab 3, the GCP-tab:
 %p
   %a(href='https://console.developers.google.com/freetrial' target='x')
     https://console.developers.google.com/freetrial
   
 %p
-  I logged into my gmail-account and tried the above link.
+  I logged in using my gmail account.
 
 %p
   It worked well; I gave it my credit-card info.
@@ -103,6 +163,8 @@
 %p
   %a(href='https://console.cloud.google.com/projectcreate' target='x')
     https://console.cloud.google.com/projectcreate
+
+%img(src='/lesson001/img003.png')
 
 %p I used that page to create a project called cpb100.
 
@@ -124,7 +186,7 @@
 
 %p It did behave well and I was ready to move on.
 
-%p I returned to the URL listed below:
+%p In the codelabs-tab, I returned to the URL listed below:
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
