--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -197,7 +197,7 @@
 
 %h2#compute-engine Compute-Engine
 
-%p Next, I clicked the next link in the series:
+%p Next, in the codelabs-tab, I clicked the next link in the series:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-compute-engine/index.html' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-compute-engine/index.html
@@ -207,7 +207,10 @@
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-compute-engine/index.html#2' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-compute-engine/index.html#2
 
-%p It asked me to click the upper-left-hamburger-link in my project page; I did that.
+%p It asked me to click the upper-left-hamburger-link in my project page.
+
+%p I went to the GCP-tab and did that.
+
 %p Then I followed the advice to click the "Compute Engine" link on the left:
 %p
   %a(href='https://console.cloud.google.com/compute' target='x')
@@ -271,11 +274,16 @@
 
 %p The above command worked perfectly.
 
-%p Next I followed the instructions in this page:
+%p Next, I returned to the codelabs-tab; I studied the instructions in this page:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-compute-engine/index.html#4' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-compute-engine/index.html#4
+
+%p I returned to my shell-window.
+
+%p I followed instructions I had just read:
+
 .syntax
   %pre
     %code.bash
@@ -285,10 +293,13 @@
 
 %p The above shell commands worked perfectly in my new GCP instance.
 
-%p I returned to the URL listed below:
+%p In the codelabs-tab, I returned to the URL listed below:
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
+
+
+%p That ended my interaction with the CPB100-node I call: "Compute-Engine".
 
 %a(href='#top') [top]
 
@@ -296,7 +307,7 @@
 
 %h2#cloud-storage Cloud-Storage
 
-%p Next, I clicked the next link in the series:
+%p Next, in the codelabs-tab, I clicked the next link in the series:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage
@@ -327,18 +338,26 @@
       bash ingest.sh
       head earthquakes.csv
 
-%p I clicked the next node in the page and landed on this URL:
+%p In the codelabs-tab, I clicked the next node in the page and landed on this URL:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#3' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#3
   
-%p I read the content on that page and then visited the URL below:
+%p I read the content on that page.
+
+%p Next, I clicked the github-tab.
+
+%p I visited the URL below:
 
 %p
   %a(href='https://github.com/GoogleCloudPlatform/datalab-samples/blob/master/basemap/earthquakes.ipynb' target='x')
     https://github.com/GoogleCloudPlatform/datalab-samples/blob/master/basemap/earthquakes.ipynb
-  
+
+%p I studied the above page.
+
+%p I returned to the shell.
+
 %p I ran two shell commands inside the GCP instance:
 
 .syntax
@@ -359,11 +378,13 @@
 
 %img(width='999' src='/lesson001/earthquakes.png')
 
-%p I clicked the next node in the page and landed on this URL:
+%p In the codelabs-tab, I clicked the next node in the page and landed on this URL:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#4' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#4
+
+%p I clicked on the GCP-tab.
 
 %p I visited the URL below:
 
@@ -393,6 +414,10 @@
 
 %p I called my new bucket: cs101feb2018
 
+%p In retrospect, I can see now that was a poor naming choice.
+
+%p Now I know to create buckets with shorter names.
+
 %p At the bottom of the form I clicked the blue "Create" button.
 
 %p I saw evidence that it worked.
@@ -402,7 +427,7 @@
 %p The page reminds me of the page served to me by AWS when I work with S3.
 
 
-%p I returned to the cpb100 page:
+%p In the codelabs-tab, I returned to the cpb100 page:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#4' target='x')
@@ -422,7 +447,7 @@
 
 %p I am confident it worked.
 
-%p I verified by returning to the "Browser" page and inspecting the contents of cs101feb2018.
+%p I verified by returning to the "Browser" page in the GCP-tab and inspecting the contents of cs101feb2018.
 
 %p It listed three files:
 
@@ -432,7 +457,7 @@
   %li earthquakes.png
   
 
-%p I returned to the cpb100 page:
+%p In the codelabs-tab, I returned to the cpb100 page:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#5' target='x')
@@ -445,7 +470,9 @@
     https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#6
 
 
-%p I returned to the "Browser" page, AKA GCP Console, and checked the boxes to "Share publicly" the three files in cs101feb2018.
+%p I returned to the "Browser" page in the GCP-tab.
+
+%p I checked the boxes to "Share publicly" the three files in cs101feb2018.
 
 %p I list the resulting URLs below:
 
@@ -476,7 +503,7 @@
 
 %p Based on this "feature", AWS-S3 is clearly superior to GCP-Storage.
 
-%p I returned to the cpb100 page:
+%p In the codelabs-tab, I returned to the cpb100 page:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#6' target='x')
@@ -490,10 +517,12 @@
 
 %p I followed the instructions in that page to delete my GCP instance.
 
-%p I returned to the URL listed below:
+%p In the codelabs-tab, I returned to the URL listed below:
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
+
+%p That ended my interaction with the CPB100-node I call: "Cloud-Storage".
 
 %a(href='#top') [top]
 
@@ -501,7 +530,11 @@
 
 %h2#cloud-sql Cloud-Sql
 
-%p Next, I clicked the next link in the series:
+%p This sub-lesson has many steps and offers many opportunities to get lost.
+
+%p Good Luck!
+
+%p In the codelabs-tab, I clicked the next link in the series:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql
@@ -521,13 +554,13 @@
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#2' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#2
   
-%p I visited my GCP-console page by visiting this URL:
+%p In the GCP-tab, I visited this URL:
 
 %p
   %a(href='https://console.cloud.google.com' target='x')
     https://console.cloud.google.com
   
-%p I found the tiny "Cloud-Shell" button near the upper-left.
+%p I found the tiny "Cloud-Shell" button near the upper-right.
 
 %p I hovered it to see: "Activate Google Cloud Shell".
 
@@ -543,12 +576,16 @@
   %pre
     =render 'lesson001b'
 
-%p I returned my attention to this page:
+%p I popped that shell window so it had its own tab.
+
+%p I moved that tab so it was tab #5, the tab after GCP-tab.
+
+%p In the codelabs-tab, I returned my attention to this page:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#2' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#2
 
-%p I returned to the Cloud-Shell and typed a shell command which looked familiar:
+%p In the Cloud-Shell-tab, I typed a shell command which looked familiar:
 
 .syntax
   %pre
@@ -611,7 +648,7 @@
   %li When admin adds a house for rent, the app adds a row to Accommodation.
   %li When ML-app predicts a user rating for a house, ML-app adds a row to Recommendation.
   
-%p In Cloud-Shell I ran another command and collected the output:
+%p In the Cloud-Shell-tab I ran another command and collected the output:
 
 .syntax
   %pre
@@ -619,7 +656,9 @@
 
 %p I see in the above output that we have accommodations and ratings but no recommendations yet.
 
-%p That completed my interaction with the page below:
+%p I returned to the codelabs-tab.
+
+%p I studied it and decided that those actions completed my interaction with the page below:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#2' target='x')
@@ -631,7 +670,9 @@
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#3' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#3
 
-%p In Cloud-Shell I ran another command:
+%p I returned to the Cloud-Shell-tab.
+
+%p I ran another command:
 
 .syntax
   %pre
@@ -643,11 +684,15 @@
   %pre
     =render 'lesson001e'
 
+%p I visited the GCP-tab.
+
 %p I verified success of the above command by visiting an appropriate URL:
 %p
   %a(href='https://console.cloud.google.com/storage/browser/cs101feb2018/sql/' target='x')
     https://console.cloud.google.com/storage/browser/cs101feb2018/sql/
-  
+    
+%p I returned to the codelabs-tab.
+
 %p I navigated to the next page in the sequence:
 
 %p
@@ -658,7 +703,7 @@
 
 %p The page listed 10 steps.
 
-%p To start step 1, I visited this URL:
+%p To start step 1, clicked the GCP-tab and I visited this URL:
 
 %p
   %a(href='https://console.cloud.google.com' target='x')
@@ -696,7 +741,7 @@
   %li IP: 35.226.122.211
   %li Instance connection name: cpb100-195004:us-central1:rentals
 
-%p Next I started a Cloud-Shell in my browser by clicking an icon in the upper-right.
+%p Next I clicked the Cloud-Shell-tab.
 
 %p I ran shell commands:
 
@@ -734,7 +779,7 @@
     =render 'lesson001g'
 
 
-%p I navigated to the next page in the sequence:
+%p In the codelabs-tab, I navigated to the next page in the sequence:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#5' target='x')
@@ -744,7 +789,7 @@
 
 %p The page listed 4 steps.
 
-%p To start step 1, I navigated to the URL listed below:
+%p To start step 1, in the GCP-tab, I navigated to the URL listed below:
 
 %p
   %a(href='https://console.cloud.google.com/sql' target='x')
@@ -772,10 +817,7 @@
 
 %p GCP got busy for 10 seconds and then indicated success with a green-check-mark.
 
-
-
-
-%p I navigated to the next page in the sequence:
+%p In the codelabs-tab, I navigated to the next page in the sequence:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#5' target='x')
@@ -785,7 +827,7 @@
 
 %p The page listed 3 steps.
 
-%p To start step 1, I navigated to the URL listed below:
+%p To start step 1, in the GCP-tab, I navigated to the URL listed below:
 
 %p
   %a(href='https://console.cloud.google.com/sql' target='x')
@@ -833,10 +875,7 @@
 
 %p Quickly after that it served a green-check-mark to indicate success.
 
-
-
-
-%p I navigated to the next page in the sequence:
+%p In the codelabs-tab, I navigated to the next page in the sequence:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#6' target='x')
@@ -848,7 +887,7 @@
 
 %p The page contained 5 steps.
 
-%p To start step 1, I visited this page:
+%p To start step 1, in the GCP-tab, I visited this page:
 
 %p
   %a(href='https://console.cloud.google.com/sql' target='x')
@@ -856,7 +895,7 @@
   
 %p I used that page to get the IP address of the MySQL instance: 35.226.122.211
 
-%p Next, I entered a shell command into Cloud Shell:
+%p Next, in the Cloud-Shell-tab, I entered a shell command:
 
 .syntax
   %pre
@@ -894,16 +933,6 @@
 
 %p That ended my interaction with the CPB100-node I call: "Setup rentals data in Cloud SQL".
 
-%p If I want to return to that node its URL is listed below:
-
-%p
-  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql' target='x')
-    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql
-
-%p I returned to the URL listed below:
-%p
-  %a(href='https://codelabs.developers.google.com/cpb100' target='x')
-    https://codelabs.developers.google.com/cpb100
 %a(href='#top') [top]
 %hr/
 %h2#dataproc Dataproc
